yml/chpt24_business/15_stock.yaml
apiVersion: apps/v1
kind: Deployment 
metadata:
  name: stock
  namespace: ms 
spec:
  replicas: 1
  selector:
    matchLabels:
      project: ms
      app: stock
  template:
    metadata:
      labels:
        project: ms 
        app: stock
    spec:
      imagePullSecrets:
      - name: registry-pull-secret
      containers:
      - name: stock
        image: harbor.justbeta.pro/ms/stock:1.0
        imagePullPolicy: IfNotPresent
        resources:       #资源申请限制
          requests:      #最低需求资源
            cpu: 0.25
            memory: 128Mi
          limits:       #限制最高资源
            cpu: 1 
            memory: 1Gi
        readinessProbe:
          tcpSocket:
            port: 8030
          initialDelaySeconds: 60
          periodSeconds: 10
        livenessProbe:
          tcpSocket:
            port: 8030
          initialDelaySeconds: 60
          periodSeconds: 10
