yml/chpt24_business/portal-service-node.yaml
apiVersion: v1
kind: Service
metadata:
  name: portal-1
  namespace: ms
spec:
  type: NodePort
  ports:
  - port: 8080
    name: portal
  selector:
    project: ms
    app: portal
