yml/chpt24_business/11_gateway.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway 
  namespace: ms 
  annotations:           #注解信息
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    -  gateway.justbeta.pro
    secretName: justbeta-pro-secret
  rules:
  - host: gateway.justbeta.pro
    http:
      paths:
      - path: /
        pathType:  Prefix
        backend:
         service:
           name: gateway
           port:
            number: 9999
---
apiVersion: v1
kind: Service
metadata:
  name: gateway
  namespace: ms
spec:
  ports:
  - port: 9999 
    name: gateway
  selector:
    project: ms
    app: gateway
---
apiVersion: apps/v1
kind: Deployment 
metadata:
  name: gateway
  namespace: ms 
spec:
  replicas: 1
  selector:
    matchLabels:
      project: ms
      app: gateway
  template:
    metadata:
      labels:
        project: ms 
        app: gateway
    spec:
      imagePullSecrets:
      - name: registry-pull-secret
      containers:
      - name: gateway
        image: harbor.justbeta.pro/ms/gateway:1.0
        imagePullPolicy: IfNotPresent
        resources:       #资源申请限制
          requests:      #最低需求资源
            cpu: 0.2
            memory: 128Mi
          limits:       #限制最高资源
            cpu: 0.5 
            memory: 1Gi
        ports:
          - protocol: TCP
            containerPort: 9999 
        readinessProbe:
          tcpSocket:
            port: 9999
          initialDelaySeconds: 60
          periodSeconds: 10
        livenessProbe:
          tcpSocket:
            port: 9999
          initialDelaySeconds: 60
          periodSeconds: 10
