yml/chpt24_business/5_ingress-myapp-will-be-delete.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-http-tomcat
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:   # 定义转发规则
  - host: demon.justbeta.pro  # 配置访问路径
    http:
      paths:
      - path: /
        pathType:  Prefix
        backend:
         service:
           name: tomcat   # 代理到tomcat 服务
           port:
            number: 8080
