yml/chpt24_business/8_ingress-certbot-prod-will-be-delete.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-http-tomcat
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    -  demon.justbeta.pro
    secretName: justbeta-pro-secret
  rules:
  - host: demon.justbeta.pro
    http:
      paths:
      - path: /
        pathType:  Prefix
        backend:
         service:
           name: tomcat
           port:
            number: 8080
