yml/chpt24_business/9_ingress-certbot-staging.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-myapp
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/issuer: "letsencrypt-staging"
spec:
  tls:
  - hosts:
    - demon.justbeta.pro
    secretName: demon.justbeta.pro.staging.tls
  rules:
  - host: demon.justbeta.pro 
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: tomcat
            port:
              number: 80
